# Synapse

./: .env.example  .gitignore  README.md  docker-compose.yml  synapse-dev-tracker.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: websocket.py
backend/app/api/v1/: executions.py  router.py  workflows.py
backend/app/core/: exceptions.py  logging.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 06bd6bbe928a_create_initial_tables.py  9db79cf61e01_create_initial_tables.py
backend/app/models/: __init__.py  base.py  execution.py  provider.py  workflow.py
backend/app/providers/: anthropic.py  base.py  gemini.py  groq.py  openai.py  openrouter.py  registry.py
backend/app/schemas/: execution.py  workflow.py
backend/app/services/: dag.py  execution_engine.py  workflow_service.py
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/features/canvas/nodes/: AgentNode.tsx  InputNode.tsx
frontend/src/features/canvas/panels/: ConfigPanel.tsx  NodePalette.tsx
frontend/src/features/execution/: ExecutionPanel.tsx  RunWorkflowModal.tsx
frontend/src/features/execution/hooks/: useExecutionWebSocket.ts
frontend/src/lib/: dag.ts
frontend/src/services/: api.ts  workflowService.ts
frontend/src/stores/: executionStore.ts  workflowStore.ts
frontend/src/types/: agent.ts  index.ts  workflow.ts
